--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>MagicMirror²</title>
 	<meta name="google" content="notranslate" />
@@ -19,24 +20,49 @@
 		var version = "#VERSION#";
 	</script>
 </head>
+
 <body>
-	<div class="region fullscreen below"><div class="container"></div></div>
+	<div class="region fullscreen below">
+		<div class="container"></div>
+	</div>
 	<div class="region top bar">
 		<div class="container"></div>
-		<div class="region top left"><div class="container"></div></div>
-		<div class="region top center"><div class="container"></div></div>
-		<div class="region top right"><div class="container"></div></div>
+		<div class="region top left">
+			<div class="container"></div>
+		</div>
+		<div class="region top center">
+			<div class="container"></div>
+		</div>
+		<div class="region top right">
+			<div class="container"></div>
+		</div>
 	</div>
-	<div class="region upper third"><div class="container"></div></div>
-	<div class="region middle center"><div class="container"></div></div>
-	<div class="region lower third"><div class="container"><br/></div></div>
+	<div class="region upper third">
+		<div class="container"></div>
+	</div>
+	<div class="region middle center">
+		<div class="container"></div>
+	</div>
+	<div class="region lower third">
+		<div class="container">
+			<br/>
+		</div>
+	</div>
 	<div class="region bottom bar">
 		<div class="container"></div>
-		<div class="region bottom left"><div class="container"></div></div>
-		<div class="region bottom center"><div class="container"></div></div>
-		<div class="region bottom right"><div class="container"></div></div>
+		<div class="region bottom left">
+			<div class="container"></div>
+		</div>
+		<div class="region bottom center">
+			<div class="container"></div>
+		</div>
+		<div class="region bottom right">
+			<div class="container"></div>
+		</div>
 	</div>
-	<div class="region fullscreen above"><div class="container"></div></div>
+	<div class="region fullscreen above">
+		<div class="container"></div>
+	</div>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="vendor/node_modules/nunjucks/browser/nunjucks.min.js"></script>
 	<script type="text/javascript" src="js/defaults.js"></script>
@@ -51,5 +77,14 @@
 	<script type="text/javascript" src="js/loader.js"></script>
 	<script type="text/javascript" src="js/socketclient.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+
+	<script type="text/javascript">
+		var socket = io('/');
+		socket.on('refresh', function (data) {
+			location.reload();
+		});
+
+	</script>
 </body>
+
 </html>
